fix item flickering

--- a/src/app/domain/itemView/item.scss
+++ b/src/app/domain/itemView/item.scss
@@ -17,6 +17,7 @@
     }
 
     .ng-gallery {
+      min-height: 50px;
       margin-top: $margin-default;
     }
 
